src/apps/services/ghostfolio/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghostfolio
  namespace: ghostfolio
spec:
  selector:
    app.kubernetes.io/name: ghostfolio
  ports:
    - name: http
      port: 3333
      targetPort: http
