src/apps/services/ghostfolio/k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ghostfolio
  namespace: ghostfolio
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - ghostfolio.internal
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ghostfolio
          port: 3333
